[package]
name = "lswt-rs"
version = "2.0.0"
edition = "2021"
authors = ["lswt-rs contributors"]
description = "List Wayland toplevels - A Rust implementation of lswt"
license = "GPL-3.0-or-later"
repository = "https://github.com/yourusername/lswt-rs"

[[bin]]
name = "lswt"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["unstable", "client"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wayland-protocols-treeland = { version = "0.1.2", features = ["client"] }
anyhow = "1.0"
